# NIKOMAIL

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
.sqlx/: query-07f436bc1fcecce89cccab36a8132bb143c5dc7f501936ab926d4ed6b8775b0b.json  query-0e06ff8db2fb9ee78bc7e49dab926fdd9116aa41d53e82403b24431997cdd3d5.json  query-38c60169d5716f11a0ac4b5cad0181714ec50af92b406b85e6368840a367e9aa.json  query-43d5dd9ff01f788ee4644f2dce2efcfee2ecff57eafcc8c57bbf9cc6928f8b21.json  query-493164d107fdf8a127a593164ed1660fd7eaf669019a3544da4a3ecb48988ac3.json  query-6b14abe30dedd0acfd4fe186ff1422fcc14d993fd4294dd9f7de799ae0e7f104.json  query-6d0f32752d08ea34580066c54a9ca72a72c2edf78e0687467787d42573307f93.json  query-8fa8c779f44174c3ce50b4958ab4fe7a646d34e5fb981b86b8782ab5a1faa00c.json  query-a8d3f3cc8bc3fe4ae42e30efa75d8241e716a6d2d1832b0c7faefb3b0cd0ea2b.json  query-ad43a73647d7f74c7081761a4968fba9910383d9e83450a155dbbef0348c6a04.json  query-b7b1ab9abc5b80dd3f98454bfccde62b2c4081c4d48458990eeb8e46bcf6c830.json  query-d3fa96c0f9f684288b8ab2a907bebe3ffb49542fe0a61df7c5c3f6d6b75c5e2b.json  query-de6296199b7db392a5532fdd6776c6f29d674f9d8eff75f611be5d535a7c240a.json  query-df7a99462b29ced3f297422a868805fbd08a0ad35ac1182ff69aebd2dd849439.json  query-e3c01b97069f97a0e4c2fb27f66e8c549b13f57d50cb707a860f31f32b14399e.json  query-e57cc8e86421b99e563de57833e3a16bede335f4d445075f71c6ddcf63c6b3a9.json  query-ebf92b07d741d0af4985462a26b379b3aa83d5b74572d0b03d6c180f0e019ea8.json  query-f1853e15239d2310ea164824e07ad31d0ddd1ab9f16ee7f5b5521aa87a7ad179.json
crates/nikomail/: Cargo.toml
crates/nikomail/src/: error.rs  main.rs  state.rs  util.rs
crates/nikomail/src/discord/: interactions.rs  mod.rs
crates/nikomail/src/discord/commands/: dm.rs  guild.rs  mod.rs  test.rs
crates/nikomail/src/discord/gateway/: context.rs  mod.rs
crates/nikomail/src/discord/gateway/event/: guild.rs  interaction.rs  message.rs  misc.rs  mod.rs  reaction.rs  thread.rs
crates/nikomail_cache/: Cargo.toml
crates/nikomail_cache/src/: discord.rs  error.rs  lib.rs  nikomail.rs
crates/nikomail_commands/: Cargo.toml
crates/nikomail_commands/src/: command.rs  error.rs  lib.rs  macros.rs  util.rs
crates/nikomail_commands/src/commands/: dm.rs  guild.rs  mod.rs
crates/nikomail_commands/src/commands/guild/: configure.rs  mod.rs
crates/nikomail_commands_core/: Cargo.toml
crates/nikomail_commands_core/src/: error.rs  interaction.rs  lib.rs
crates/nikomail_commands_core/src/context/: mod.rs
crates/nikomail_commands_core_macros/: Cargo.toml
crates/nikomail_commands_core_macros/src/: lib.rs
crates/nikomail_macros/: Cargo.toml
crates/nikomail_macros/src/: lib.rs  util.rs
crates/nikomail_models/: Cargo.toml
crates/nikomail_models/src/: error.rs  lib.rs
crates/nikomail_models/src/discord/: channel.rs  guild.rs  mod.rs
crates/nikomail_models/src/nikomail/: mod.rs  relayed_message.rs  server.rs  topic.rs  user_state.rs
crates/nikomail_util/: Cargo.toml
crates/nikomail_util/src/: lib.rs
migrations/: 20240531173405_init.sql  20240601172645_user-blacklists.sql  20240621145437_user-states-and-copied-messages.sql
