[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["katsumi143 <32640219+katsumi143@users.noreply.github.com>"]
edition = "2024"
license = "GPL-3.0-only"
version = "0.1.0"
homepage = "https://github.com/hakusoda/NIKOMAIL"
repository = "https://github.com/hakusoda/NIKOMAIL"
rust-version = "1.79"

[workspace.dependencies]
sqlx = { version = "0.7.4", features = ["uuid", "json", "chrono", "macros", "postgres", "tls-native-tls", "rust_decimal", "runtime-tokio"] }
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
futures = "0.3.30"
dashmap = { version = "6.0.1", features = ["inline"] }
thiserror = "1.0.61"
once_cell = "1.19.0"
serde_repr = "0.1.19"
async-once-cell = "0.5.3"
tracing = "0.1.40"
twilight-gateway = { git = "https://github.com/twilight-rs/twilight.git", rev = "6a44028", features = ["simd-json"] }
twilight-http = { git = "https://github.com/twilight-rs/twilight.git", rev = "6a44028", features = ["simd-json"] }
twilight-model = { git = "https://github.com/twilight-rs/twilight.git", rev = "6a44028" }
twilight-util = { git = "https://github.com/twilight-rs/twilight.git", rev = "6a44028", features = ["builder"] }

[profile.dev]
lto = false
debug = true
rpath = false
panic = "unwind"
opt-level = 0
incremental = true
codegen-units = 256
overflow-checks = true
debug-assertions = true

[profile.release]
lto = true
strip = true
panic = "abort"
opt-level = 3
incremental = false
codegen-units = 1
debug-assertions = false