cargo-features = ["edition2024"]

[package]
name = "nikomail"
description = "anonymous mail prototype"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
sqlx.workspace = true
tokio.workspace = true
serde.workspace = true
chrono = { version = "0.4.38", features = ["serde"] }
tracing.workspace = true
futures.workspace = true
dashmap.workspace = true
reqwest = "0.12.4"
thiserror.workspace = true
once_cell.workspace = true
simd-json = "0.13.10"
serde_repr.workspace = true
serde_json = "1.0.117"
nikomail_util.path = "../nikomail_util"
twilight-http.workspace = true
twilight-util = { git = "https://github.com/twilight-rs/twilight.git", rev = "6a44028", features = ["builder"] }
twilight-model.workspace = true
async-once-cell.workspace = true
nikomail_cache.path = "../nikomail_cache"
nikomail_commands.path = "../nikomail_commands"
nikomail_models.path = "../nikomail_models"
twilight-gateway.workspace = true
tracing-subscriber = "0.3.18"