cargo-features = ["edition2024"]

[package]
name = "nikomail"
description = "anonymous mail prototype"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-once-cell.workspace = true
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
nikomail_cache.path = "../nikomail_cache"
nikomail_commands.path = "../nikomail_commands"
nikomail_commands_core.path = "../nikomail_commands_core"
nikomail_models.path = "../nikomail_models"
nikomail_util.path = "../nikomail_util"
once_cell.workspace = true
reqwest = "0.12.4"
serde.workspace = true
serde_json = "1.0.117"
serde_repr.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3.18"
twilight-http.workspace = true
twilight-model.workspace = true
twilight-util.workspace = true
twilight-gateway.workspace = true