cargo-features = ["edition2024"]

[package]
name = "nikomail_commands"
description = "anonymous mail prototype"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1.80"

nikomail_cache.path = "../nikomail_cache"
nikomail_macros.path = "../nikomail_macros"
nikomail_util.path = "../nikomail_util"

once_cell.workspace = true

serde.workspace = true
serde_repr.workspace = true
sqlx.workspace = true

thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
twilight-http.workspace = true
twilight-model.workspace = true