cargo-features = ["edition2024"]

[package]
name = "nikomail_commands"
description = "anonymous mail prototype"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
nikomail_cache.path = "../nikomail_cache"
nikomail_commands_core.path = "../nikomail_commands_core"
nikomail_util.path = "../nikomail_util"

once_cell.workspace = true

sqlx.workspace = true

thiserror.workspace = true
tracing.workspace = true
twilight-model.workspace = true