cargo-features = ["edition2024"]

[package]
name = "nikomail_commands_core"
description = "anonymous mail prototype"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1.81"

nikomail_cache.path = "../nikomail_cache"
nikomail_commands_core_macros.path = "../nikomail_commands_core_macros"
nikomail_util.path = "../nikomail_util"

serde.workspace = true
serde_repr.workspace = true
sqlx.workspace = true

thiserror.workspace = true
twilight-http.workspace = true
twilight-model.workspace = true
twilight-util.workspace = true