cargo-features = ["edition2024"]

[package]
name = "nikomail_models"
description = "anonymous mail prototype"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sqlx.workspace = true
thiserror.workspace = true
nikomail_util.path = "../nikomail_util"
tracing-error.workspace = true
twilight-model.workspace = true