cargo-features = ["edition2024"]

[package]
name = "nikomail_util"
description = "anonymous mail prototype"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-once-cell.workspace = true

once_cell.workspace = true

sqlx.workspace = true

twilight-http.workspace = true
twilight-model.workspace = true